<resources>
  <string name="app_name">ForwardResultExample</string>
  <string name="complete_name_first">Complete the name first</string>
  <string name="complete_address_first">Complete the address first</string>
  <string name="type_something_first">Type something first</string>
  <string name="buy_something">Buy something</string>
  <string name="complete_profile">Complete profile</string>
  <string name="name">Name:</string>
  <string name="address">Address:</string>
  <string name="name_hint">Name</string>
  <string name="address_hint">Address</string>
  <string name="complete_address">Complete address</string>
  <string name="accept">Accept</string>
  <string name="complete_buy">Complete buy</string>
  <string name="complete_the_profile_first">Complete the profile first</string>
  <string name="add_address">Add address</string>
  <string name="empty">Empty</string>
  <string name="other_possible_entry_to_profile">Other possible entry to profile</string>
  <string name="complete_other_possible_entry">Complete other possible entry</string>
</resources>
