<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <include layout="@layout/toolbar"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="15dip"
      >

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:hint="@string/name_hint"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

      <TextView
          android:id="@+id/address"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_marginEnd="10dip"
          android:layout_marginRight="10dip"
          android:layout_weight="1"
          android:ellipsize="end"
          android:gravity="end"
          android:lines="1"
          android:text="@string/empty"
          />
      <Button
          android:id="@+id/add_address"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/add_address"
          />
    </LinearLayout>

    <Button
        android:id="@+id/complete_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/complete_profile"
        />

  </LinearLayout>

</LinearLayout>
