<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <include layout="@layout/toolbar"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      android:padding="15dip"
      >

    <Button
        android:id="@+id/complete_profile_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/complete_the_profile_first"
        />

    <LinearLayout
        android:id="@+id/profile_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        >

      <LinearLayout
          android:layout_width="wrap_content"
          android:layout_height="0dp"
          android:layout_weight="1"
          android:gravity="center"
          android:orientation="vertical"
          >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:text="@string/name"
            />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/address"
            />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            />

      </LinearLayout>

      <Button
          android:id="@+id/complete_buy"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/complete_buy"
          />
    </LinearLayout>

  </LinearLayout>

</LinearLayout>
