<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

  <include layout="@layout/toolbar"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center"
      android:orientation="vertical"
      android:padding="15dip"
      >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        >

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dip"
          android:text="@string/name"
          />

      <TextView
          android:id="@+id/name"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dip"
          />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dip"
          android:text="@string/address"
          />

      <TextView
          android:id="@+id/address"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dip"
          />
    </LinearLayout>

    <Button
        android:id="@+id/accept"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/accept"
        />
  </LinearLayout>

</LinearLayout>
